--- a/osa2/puhelinluettelo/package.json
+++ b/osa2/puhelinluettelo/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-native": "^0.72.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
